refac & fix
