# internal/model/user_models.go
@@ -10,8 +10,8 @@ type User struct {
 
 type VerifyUser struct {
 	Email      string `json:"email"`
-	VerifyCode string `json:"verifyCode"`
 	Password   string `json:"password"`
 	Role       string `json:"role"`
 	Name       string `json:"name"`
+	VerifyCode string `json:"verifyCode"`
 }
